--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        <style>
+            *.can-filter.filtered { display: none; }
+        </style>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -16,9 +19,14 @@
                 <div class="mdl-layout__header-row">
                     <span class="mdl-layout-title">{% block header %}Welcome!{% endblock %}</span>
                     <div class="mdl-layout-spacer"></div>
-                    <nav class="mdl-navigation mdl-layout--large-screen-only">
-                        <a class="mdl-navigation__link" href="{{ path('homepage') }}">Airports</a>
-                    </nav>
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
+                        <label class="mdl-button mdl-js-button mdl-button--icon" for="main-list-filter">
+                            <i class="material-icons">search</i>
+                        </label>
+                        <div class="mdl-textfield__expandable-holder">
+                            <input class="mdl-textfield__input" type="text" name="sample" id="main-list-filter">
+                        </div>
+                    </div>
                 </div>
             </header>
             <div class="mdl-layout__drawer">
@@ -32,5 +40,29 @@
             </main>
         </div>
         {% block javascripts %}{% endblock %}
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                document.getElementById('main-list-filter').addEventListener('keyup', function (elm, elm2) {
+                    if (this.value.length < 2) {
+                        return;
+                    }
+
+                    var searchText = this.value.trim().replace(/ +/g, ' ').toLowerCase(),
+                        filterables = document.getElementsByClassName('can-filter');
+
+                    for (var i=0, l = filterables.length; i < l; i++) {
+                        var dataset     = filterables[i].dataset,
+                            airportCode = dataset.airportCode.toLowerCase(),
+                            airportName = dataset.airportName.toLowerCase();
+
+                        if (airportCode.match(searchText) || airportName.match(searchText)) {
+                            filterables[i].classList.remove('filtered');
+                        } else {
+                            filterables[i].classList.add('filtered');
+                        }
+                    }
+                });
+            }, false);
+        </script>
     </body>
 </html>
